--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="style.css">
-    <title>E-sport</title>
+    <link rel="stylesheet" href="sty1.css">
+    <title>Gam-con</title>
 </head>
 <body>
-    
+    <section class="head">
+        <header class="text-gray-400 bg-gray-900 body-font">
+            <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+              <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
+                
+            <img class="ml-3 logo" src="img/logo.png" alt="logo">
+                <span class="ml-3 text-xl">Gam-con</span>
+              </a>
+              <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
+                <a class="mr-5 hover:text-white">About</a>
+                <a class="mr-5 hover:text-white">Events</a>
+                <a class="mr-5 hover:text-white">Contact</a>
+                <a class="mr-5 hover:text-white">News</a>
+              </nav>
+              <button class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">Button
+                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+                  <path d="M5 12h14M12 5l7 7-7 7"></path>
+                </svg>
+              </button>
+            </div>
+          </header>
+    </section>
+
+<!-- ////////////////////////////////////////HEADER\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
+    <section class="About">
+   <section class="text-gray-400 bg-gray-900 body-font">
+  <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+    <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
+      <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">Where Pros,
+        <br class="hidden lg:inline-block">are made
+      </h1>
+      <p class="mb-8 leading-relaxed">For the Gamers , By the Gamers We wanted to create a community for gamers so we made this annual event to showcase your skill
+          compete make friends and most importantly gain recoginition in the field of gaming with the support of 500K+ viewers (last year!) </p>
+      <div class="flex justify-center">
+        <button class="inline-flex text-white bg-purple-500 border-0 py-2 px-6 focus:outline-none hover:bg-purple-600 rounded text-lg">Brochure</button>
+        <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">History</button>
+      </div>
+    </div>
+    <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
+      <img class="object-cover object-center rounded" alt="gaming-img-here" src="">
+    </div>
+  </div>
+</section>
+    </section>
+<!-- /////////////////////////////////////////////FOCUS COnTENT\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
+
+
 </body>
 </html>
