added more content , connected with fontawesome

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,69 @@
 </section>
     </section>
 <!-- /////////////////////////////////////////////FOCUS COnTENT\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
+<section class="2021-event" >
+    <section class="text-gray-400 body-font bg-gray-900">
+        <div class="container px-5 py-5 mx-auto">
+          <div class="flex flex-col text-center w-full mb-20">
+            <h2 class="text-xs text-purple-400 tracking-widest font-medium title-font mb-1">2021</h2>
+            <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-white">GAM-CON</h1>
+            <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Well This year we are back with more games more prizes and most importantly more ambition to make this event the best e-sport event you have ever attended as Viewer or Player</p>
+          </div>
+      </section>
+    <section class="text-gray-400 bg-gray-900 body-font">
+        <div class="container px-5 py-24 mx-auto flex flex-wrap">
+          <div class="lg:w-1/2 w-full mb-10 lg:mb-0 rounded-lg overflow-hidden">
+            <img alt="feature" class="object-cover object-center h-full w-full" src="https://dummyimage.com/460x500">
+          </div>
+          <div class="flex flex-col flex-wrap lg:py-6 -mb-10 lg:w-1/2 lg:pl-12 lg:text-left text-center">
+            <div class="flex flex-col mb-10 lg:items-start items-center">
+              <div class="w-12 h-12 inline-flex items-center justify-center rounded-full bg-gray-800 text-purple-400 mb-5">
+               
+                <i class="fas fa-money-check-alt"></i>
+              </div>
+              <div class="flex-grow">
+                <h2 class="text-white text-lg title-font font-medium mb-3">Prize Pool</h2>
+                <p class="leading-relaxed text-base">2021 GAM-CON is Going to have the biggest Prize Pool</p>
+                <a class="mt-3 text-purple-400 inline-flex items-center">Learn More
+                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                    <path d="M5 12h14M12 5l7 7-7 7"></path>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div class="flex flex-col mb-10 lg:items-start items-center">
+              <div class="w-12 h-12 inline-flex items-center justify-center rounded-full bg-gray-800 text-purple-400 mb-5">
+                <i class="fas fa-gamepad"></i>
+              </div>
+              <div class="flex-grow">
+                <h2 class="text-white text-lg title-font font-medium mb-3">More Games</h2>
+                <p class="leading-relaxed text-base">From Tetris to Hardcore Shooter Games , Every Type of Games for Every Type of Gamers</p>
+                <a class="mt-3 text-purple-400 inline-flex items-center">Learn More
+                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                    <path d="M5 12h14M12 5l7 7-7 7"></path>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div class="flex flex-col mb-10 lg:items-start items-center">
+              <div class="w-12 h-12 inline-flex items-center justify-center rounded-full bg-gray-800 text-purple-400 mb-5">
+                <i class="fas fa-laugh-squint"></i>
+              </div>
+              <div class="flex-grow">
+                <h2 class="text-white text-lg title-font font-medium mb-3">Most Entertaing Live Stream</h2>
+                <p class="leading-relaxed text-base">This year live stream will feature gamers , musician and so many artist as commentator to give best experi</p>
+                <a class="mt-3 text-purple-400 inline-flex items-center">Learn More
+                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                    <path d="M5 12h14M12 5l7 7-7 7"></path>
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-
+</section>
+<script src="https://kit.fontawesome.com/dffe87f9d5.js" crossorigin="anonymous"></script>
 </body>
 </html>
