--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="sty1.css">
-    <title>Gam-con</title>
+    <title>Gam-Con</title>
 </head>
 <body>
     <section class="head">
@@ -15,7 +15,7 @@
               <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
                 
             <img class="ml-3 logo" src="img/logo.png" alt="logo">
-                <span class="ml-3 text-xl">Gam-con</span>
+                <span class="ml-3 text-xl">Gam-Con</span>
               </a>
               <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
                 <a class="mr-5 hover:text-white">About</a>
@@ -23,10 +23,7 @@
                 <a class="mr-5 hover:text-white">Contact</a>
                 <a class="mr-5 hover:text-white">News</a>
               </nav>
-              <button class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">Button
-                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-                  <path d="M5 12h14M12 5l7 7-7 7"></path>
-                </svg>
+              <button class="inline-flex items-center bg-purple-800 border-0 py-1 px-3 focus:outline-none hover:bg-indigo-700 rounded text-base mt-4 md:mt-0">Brochure <i class="fas fa-level-down-alt"></i>
               </button>
             </div>
           </header>
@@ -66,7 +63,7 @@
     <section class="text-gray-400 bg-gray-900 body-font">
         <div class="container px-5 py-24 mx-auto flex flex-wrap">
           <div class="lg:w-1/2 w-full mb-10 lg:mb-0 rounded-lg overflow-hidden">
-            <img alt="feature" class="object-cover object-center h-full w-full" src="https://dummyimage.com/460x500">
+            <img alt="game-event" class="object-cover object-center h-full w-full" src="">
           </div>
           <div class="flex flex-col flex-wrap lg:py-6 -mb-10 lg:w-1/2 lg:pl-12 lg:text-left text-center">
             <div class="flex flex-col mb-10 lg:items-start items-center">
@@ -104,7 +101,7 @@
               </div>
               <div class="flex-grow">
                 <h2 class="text-white text-lg title-font font-medium mb-3">Most Entertaing Live Stream</h2>
-                <p class="leading-relaxed text-base">This year live stream will feature gamers , musician and so many artist as commentator to give best experi</p>
+                <p class="leading-relaxed text-base">This year live stream will feature gamers , musician and so many artist as commentator to give best experience</p>
                 <a class="mt-3 text-purple-400 inline-flex items-center">Learn More
                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                     <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -115,7 +112,79 @@
           </div>
         </div>
       </section>
-
+</section>
+<!-- ////////////////////////////////////////////////////////2021 event\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
+<section class="games">
+    <section class="text-gray-400 bg-gray-900 body-font">
+        <div class="container px-5 py-24 mx-auto">
+          <div class="flex flex-col text-center w-full mb-20">
+            <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-white">Games</h1>
+            <p class="lg:w-2/3 mx-auto leading-relaxed text-base">This Year we are featuring so many games where you can compete and for once and all finish the argument that YOU ARE THE BEST!</p>
+          </div>
+          <div class="flex flex-wrap -m-4">
+            <div class="lg:w-1/3 sm:w-1/2 p-4">
+              <div class="flex relative">
+                <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="img/valo.jpg">
+                <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
+                  <h2 class="tracking-widest text-sm title-font font-medium text-purple-400 mb-1">FPS</h2>
+                  <h1 class="title-font text-lg font-medium text-white mb-3">Valorant</h1>
+                  <p class="leading-relaxed">Competetive 5v5 experience at it's peak , DO WE NEED TO TELL YOU ABOUT VALORANT? Come on!! Gamers register fast!</p>
+                </div>
+              </div>
+            </div>
+            <div class="lg:w-1/3 sm:w-1/2 p-4">
+              <div class="flex relative">
+                <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="img/pubg.jpg">
+                <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
+                  <h2 class="tracking-widest text-sm title-font font-medium text-purple-400 mb-1">FPS/TPS</h2>
+                  <h1 class="title-font text-lg font-medium text-white mb-3">PUBG M</h1>
+                  <p class="leading-relaxed">Our favourite Battle Royale is here, Bring Your Squad online ASAP compete in your favourite FPS or TPS style we got it all!  </p>
+                </div>
+              </div>
+            </div>
+            <div class="lg:w-1/3 sm:w-1/2 p-4">
+              <div class="flex relative">
+                <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="img/tetris.jpg">
+                <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
+                  <h2 class="tracking-widest text-sm title-font font-medium text-purple-400 mb-1">PUZZLE</h2>
+                  <h1 class="title-font text-lg font-medium text-white mb-3">Tetris</h1>
+                  <p class="leading-relaxed">So your Brain works faster than your finger? We got you! Compete and get the highest score</p>
+                </div>
+              </div>
+            </div>
+            <div class="lg:w-1/3 sm:w-1/2 p-4">
+              <div class="flex relative">
+                <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="img/csgo.jpg">
+                <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
+                  <h2 class="tracking-widest text-sm title-font font-medium text-purple-400 mb-1">FPS</h2>
+                  <h1 class="title-font text-lg font-medium text-white mb-3">Counter Strike GO</h1>
+                  <p class="leading-relaxed">For Our Dust2 fans we give you csgo tournament register yourself asap cause we know this is going to be filled very soon</p>
+                </div>
+              </div>
+            </div>
+            <div class="lg:w-1/3 sm:w-1/2 p-4">
+              <div class="flex relative">
+                <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="img/nfs heat.png">
+                <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
+                  <h2 class="tracking-widest text-sm title-font font-medium text-purple-400 mb-1">Racing</h2>
+                  <h1 class="title-font text-lg font-medium text-white mb-3">NFS Heat</h1>
+                  <p class="leading-relaxed">So for the call motorheads and speed lovers we got NFS Heat join with your favourite ride and on time pls? Get  Ride or die Experience Event </p>
+                </div>
+              </div>
+            </div>
+            <div class="lg:w-1/3 sm:w-1/2 p-4">
+              <div class="flex relative">
+                <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="img/mincraft.jpg">
+                <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
+                  <h2 class="tracking-widest text-sm title-font font-medium text-purple-400 mb-1">Creativity</h2>
+                  <h1 class="title-font text-lg font-medium text-white mb-3">Minecraft</h1>
+                  <p class="leading-relaxed">Unleash Your Creativity And Build the Building , park or whaterver with the given Matching theme and tuned to our livestream for tips!</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 </section>
 <script src="https://kit.fontawesome.com/dffe87f9d5.js" crossorigin="anonymous"></script>
 </body>
