made the footer

--- a/public/index.html
+++ b/public/index.html
@@ -186,6 +186,33 @@
         </div>
       </section>
 </section>
+<!-- /////////////////////////////////////////////GAMES\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
+<section class="bottom">
+    <footer class="text-gray-400 bg-gray-900 body-font">
+        <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
+          <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
+            <img class="ml-3 logo" src="img/logo.png" alt="logo">
+            <span class="ml-3 text-xl">Gam-Con</span>
+          </a>
+          <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2021 Gam-Con
+          </p>
+          <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
+            <a class="text-gray-400">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a class="ml-3 text-gray-400">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a class="ml-3 text-gray-400">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a class="ml-3 text-gray-400">
+                <i class="fab fa-linkedin-in"></i>
+            </a>
+          </span>
+        </div>
+      </footer>
+</section>
 <script src="https://kit.fontawesome.com/dffe87f9d5.js" crossorigin="anonymous"></script>
 </body>
 </html>
