--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,12 @@
                 <span class="ml-3 text-xl">Gam-Con</span>
               </a>
               <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-                <a class="mr-5 hover:text-white">About</a>
+                <a class="mr-5 hover:text-white" href="">About</a>
                 <a class="mr-5 hover:text-white">Events</a>
                 <a class="mr-5 hover:text-white">Contact</a>
                 <a class="mr-5 hover:text-white">News</a>
               </nav>
-              <button class="inline-flex items-center bg-purple-800 border-0 py-1 px-3 focus:outline-none hover:bg-indigo-700 rounded text-base mt-4 md:mt-0">Brochure <i class="fas fa-level-down-alt"></i>
+              <button class="inline-flex items-center text-gray-50  bg-purple-500 border-0 py-1 px-3 focus:outline-none hover:bg-purple-600 rounded text-base mt-4 md:mt-0">Brochure  <i class="fas fa-level-down-alt"></i>
               </button>
             </div>
           </header>
@@ -41,7 +41,7 @@
           compete make friends and most importantly gain recoginition in the field of gaming with the support of 500K+ viewers (last year!) </p>
       <div class="flex justify-center">
         <button class="inline-flex text-white bg-purple-500 border-0 py-2 px-6 focus:outline-none hover:bg-purple-600 rounded text-lg">Brochure</button>
-        <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">History</button>
+        <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">Register</button>
       </div>
     </div>
     <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
@@ -74,10 +74,7 @@
               <div class="flex-grow">
                 <h2 class="text-white text-lg title-font font-medium mb-3">Prize Pool</h2>
                 <p class="leading-relaxed text-base">2021 GAM-CON is Going to have the biggest Prize Pool</p>
-                <a class="mt-3 text-purple-400 inline-flex items-center">Learn More
-                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-                    <path d="M5 12h14M12 5l7 7-7 7"></path>
-                  </svg>
+                <a class="mt-3 text-purple-400 inline-flex items-center">Learn More <i class="fas fa-arrow-right w-4 h-4 ml-2""></i>
                 </a>
               </div>
             </div>
@@ -88,10 +85,7 @@
               <div class="flex-grow">
                 <h2 class="text-white text-lg title-font font-medium mb-3">More Games</h2>
                 <p class="leading-relaxed text-base">From Tetris to Hardcore Shooter Games , Every Type of Games for Every Type of Gamers</p>
-                <a class="mt-3 text-purple-400 inline-flex items-center">Learn More
-                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-                    <path d="M5 12h14M12 5l7 7-7 7"></path>
-                  </svg>
+                <a class="mt-3 text-purple-400 inline-flex items-center">Learn More <i class="fas fa-arrow-right w-4 h-4 ml-2""></i>
                 </a>
               </div>
             </div>
@@ -102,10 +96,7 @@
               <div class="flex-grow">
                 <h2 class="text-white text-lg title-font font-medium mb-3">Most Entertaing Live Stream</h2>
                 <p class="leading-relaxed text-base">This year live stream will feature gamers , musician and so many artist as commentator to give best experience</p>
-                <a class="mt-3 text-purple-400 inline-flex items-center">Learn More
-                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-                    <path d="M5 12h14M12 5l7 7-7 7"></path>
-                  </svg>
+                <a class="mt-3 text-purple-400 inline-flex items-center">Learn More <i class="fas fa-arrow-right w-4 h-4 ml-2""></i>
                 </a>
               </div>
             </div>
@@ -213,6 +204,8 @@
         </div>
       </footer>
 </section>
+<script src="winbox/winbox.js"></script>
+<script src="index.js"></script>
 <script src="https://kit.fontawesome.com/dffe87f9d5.js" crossorigin="anonymous"></script>
 </body>
 </html>
