--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <title>Gam-Con</title>
 </head>
 <body>
+  <!-- ////////////////////////////////////////HEADER\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
     <section class="head">
         <header class="text-gray-400 bg-gray-900 body-font">
             <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
@@ -18,7 +19,7 @@
                 <span class="ml-3 text-xl">Gam-Con</span>
               </a>
               <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-                <a class="mr-5 hover:text-white" href="">About</a>
+                <a class="mr-5 hover:text-white" href="about/about.html">About</a>
                 <a class="mr-5 hover:text-white">Events</a>
                 <a class="mr-5 hover:text-white">Contact</a>
                 <a class="mr-5 hover:text-white">News</a>
@@ -30,7 +31,8 @@
     </section>
 
 <!-- ////////////////////////////////////////HEADER\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
-    <section class="About">
+<!-- /////////////////////////////////////////////FOCUS COnTENT\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
+ <section class="About">
    <section class="text-gray-400 bg-gray-900 body-font">
   <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
     <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
@@ -38,7 +40,7 @@
         <br class="hidden lg:inline-block">are made
       </h1>
       <p class="mb-8 leading-relaxed">For the Gamers , By the Gamers We wanted to create a community for gamers so we made this annual event to showcase your skill
-          compete make friends and most importantly gain recoginition in the field of gaming with the support of 500K+ viewers (last year!) </p>
+          compete make friends and most importantly gain recoginition in the field of gaming with the support of 3M+ viewers (last year!) </p>
       <div class="flex justify-center">
         <button class="inline-flex text-white bg-purple-500 border-0 py-2 px-6 focus:outline-none hover:bg-purple-600 rounded text-lg">Brochure</button>
         <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">Register</button>
@@ -51,6 +53,7 @@
 </section>
     </section>
 <!-- /////////////////////////////////////////////FOCUS COnTENT\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
+<!-- ////////////////////////////////////////////////////////2021 event\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
 <section class="2021-event" >
     <section class="text-gray-400 body-font bg-gray-900">
         <div class="container px-5 py-5 mx-auto">
@@ -105,6 +108,7 @@
       </section>
 </section>
 <!-- ////////////////////////////////////////////////////////2021 event\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
+<!-- /////////////////////////////////////////////GAMES\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
 <section class="games">
     <section class="text-gray-400 bg-gray-900 body-font">
         <div class="container px-5 py-24 mx-auto">
@@ -178,6 +182,7 @@
       </section>
 </section>
 <!-- /////////////////////////////////////////////GAMES\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
+<!-- ///////////////////////////////////////////////FOOTER\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
 <section class="bottom">
     <footer class="text-gray-400 bg-gray-900 body-font">
         <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
@@ -204,8 +209,11 @@
         </div>
       </footer>
 </section>
+<!-- ///////////////////////////////////////////////FOOTER\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
+<!-- /////////////////////////////////////////////////////////////SCRIPTS\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
 <script src="winbox/winbox.js"></script>
 <script src="index.js"></script>
 <script src="https://kit.fontawesome.com/dffe87f9d5.js" crossorigin="anonymous"></script>
+<!-- /////////////////////////////////////////////////////////////SCRIPTS\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
 </body>
 </html>
