--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
               </a>
               <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
                 <a class="mr-5 hover:text-white" href="about/about.html">About</a>
-                <a class="mr-5 hover:text-white">Events</a>
+                <a class="mr-5 hover:text-white" href="schedule/schedule.html">Schedule</a>
                 <a class="mr-5 hover:text-white">Contact</a>
                 <a class="mr-5 hover:text-white">News</a>
               </nav>
