--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
               <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
                 <a class="mr-5 hover:text-white" href="about/about.html">About</a>
                 <a class="mr-5 hover:text-white" href="schedule/schedule.html">Schedule</a>
-                <a class="mr-5 hover:text-white">Contact</a>
+                <a class="mr-5 hover:text-white" href="contact/contact.html">Contact</a>
                 <a class="mr-5 hover:text-white">News</a>
               </nav>
               <button class="inline-flex items-center text-gray-50  bg-purple-500 border-0 py-1 px-3 focus:outline-none hover:bg-purple-600 rounded text-base mt-4 md:mt-0">Brochure  <i class="fas fa-level-down-alt"></i>
