--- a/public/about/about.html
+++ b/public/about/about.html
@@ -13,7 +13,7 @@
     <section class="head">
         <header class="text-gray-400 bg-gray-900 body-font">
             <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-              <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
+              <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0"  href="/public/index.html">
                 
             <img class="ml-3 logo" src="/public/img/logo.png" alt="logo">
                 <span class="ml-3 text-xl">Gam-Con</span>
@@ -21,8 +21,8 @@
               <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
                 <a class="mr-5 hover:text-white" href="/public/index.html">Home</a>
                 <a class="mr-5 hover:text-white" href="/public/schedule/schedule.html">Schedule</a>
-                <a class="mr-5 hover:text-white">Contact</a>
-                <a class="mr-5 hover:text-white">News</a>
+                <a class="mr-5 hover:text-white" href="/public/contact/contact.html">Contact</a>
+                <a class="mr-5 hover:text-white" href="/public/News/news.html">News</a>
               </nav>
               <button class="inline-flex items-center text-gray-50  bg-purple-500 border-0 py-1 px-3 focus:outline-none hover:bg-purple-600 rounded text-base mt-4 md:mt-0">Brochure  <i class="fas fa-level-down-alt"></i>
               </button>
