--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <section class="head">
         <header class="text-gray-400 bg-gray-900 body-font">
             <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-              <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
+              <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0 "  href="/public/index.html">
                 
             <img class="ml-3 logo" src="img/logo.png" alt="logo">
                 <span class="ml-3 text-xl">Gam-Con</span>
@@ -22,7 +22,7 @@
                 <a class="mr-5 hover:text-white" href="about/about.html">About</a>
                 <a class="mr-5 hover:text-white" href="schedule/schedule.html">Schedule</a>
                 <a class="mr-5 hover:text-white" href="contact/contact.html">Contact</a>
-                <a class="mr-5 hover:text-white">News</a>
+                <a class="mr-5 hover:text-white" href="News/news.html">News</a>
               </nav>
               <button class="inline-flex items-center text-gray-50  bg-purple-500 border-0 py-1 px-3 focus:outline-none hover:bg-purple-600 rounded text-base mt-4 md:mt-0">Brochure  <i class="fas fa-level-down-alt"></i>
               </button>
