--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,11 @@
    <section class="text-gray-400 bg-gray-900 body-font">
   <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
     <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
+      <div class="typing">
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">Where Pros,
         <br class="hidden lg:inline-block">are made
       </h1>
+    </div>
       <p class="mb-8 leading-relaxed">For the Gamers , By the Gamers We wanted to create a community for gamers so we made this annual event to showcase your skill
           compete make friends and most importantly gain recoginition in the field of gaming with the support of 3M+ viewers (last year!) </p>
       <div class="flex justify-center">
@@ -210,6 +212,7 @@
       </footer>
 </section>
 <!-- ///////////////////////////////////////////////FOOTER\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
+
 <!-- /////////////////////////////////////////////////////////////SCRIPTS\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
 <script src="winbox/winbox.js"></script>
 <script src="index.js"></script>
