--- a/public/about/about.html
+++ b/public/about/about.html
@@ -34,12 +34,12 @@
         <div class="container px-5 py-24 mx-auto flex flex-col">
           <div class="lg:w-4/6 mx-auto">
             <div class="rounded-lg h-64 overflow-hidden">
-              <img alt="1200x500" class="object-cover object-center h-full w-full" src="">
+              <img alt="1200x500" class="object-cover object-center h-full w-full" src="/public/img/team2.png">
             </div>
             <div class="flex flex-col sm:flex-row mt-10">
               <div class="sm:w-1/3 text-center sm:pr-8 sm:py-8">
                 <div class="w-20 h-20 rounded-full inline-flex items-center justify-center bg-gray-800 text-gray-600">
-                  <img src="" class="w-10 h-10" alt="thompson-photo">
+                  <img src="/public/img/pp1.png" class="w-18 h-18" alt="thompson-photo">
                  </div>
                 <div class="flex flex-col items-center text-center justify-center">
                   <h2 class="font-medium title-font mt-4 text-white text-lg">Alex Thompson</h2>
@@ -66,7 +66,7 @@
           <div class="flex flex-wrap -m-4">
             <div class="p-4 lg:w-1/2">
               <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
-                <img alt="thomasj-200x200" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="">
+                <img alt="thomasj-200x200" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="/public/img/pp2.jpg">
                 <div class="flex-grow sm:pl-8">
                   <h2 class="title-font font-medium text-lg text-white">Thomas J</h2>
                   <h3 class="text-gray-500 mb-3">Event Head</h3>
@@ -81,7 +81,7 @@
             </div>
             <div class="p-4 lg:w-1/2">
               <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
-                <img alt="Alexa" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="">
+                <img alt="Alexa" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="/public/img/fp1.jpg">
                 <div class="flex-grow sm:pl-8">
                   <h2 class="title-font font-medium text-lg text-white">Alexa L.</h2>
                   <h3 class="text-gray-500 mb-3">Tech Head</h3>
@@ -96,7 +96,7 @@
             </div>
             <div class="p-4 lg:w-1/2">
               <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
-                <img alt="Susan" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="">
+                <img alt="Susan" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="/public/img/fp2.jpg">
                 <div class="flex-grow sm:pl-8">
                   <h2 class="title-font font-medium text-lg text-white">Susan Quinn</h2>
                   <h3 class="text-gray-500 mb-3">Sponsor Head</h3>
@@ -111,7 +111,7 @@
             </div>
             <div class="p-4 lg:w-1/2">
               <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
-                <img alt="Rakhesh" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="">
+                <img alt="Rakhesh" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="/public/img/pp3.jpg">
                 <div class="flex-grow sm:pl-8">
                   <h2 class="title-font font-medium text-lg text-white">Rakesh Khanna</h2>
                   <h3 class="text-gray-500 mb-3">Social Media Head</h3>
