--- a/public/contact/contact.html
+++ b/public/contact/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/styles.css">
     <link rel="stylesheet" href="/public/sty1.css">
+    <link rel="shortcut icon" href="/public/favicon.ico" type="favicon">
     <title>Contact</title>
 </head>
 <body>
