made some changes

--- a/public/about/about.html
+++ b/public/about/about.html
@@ -25,8 +25,9 @@
                 <a class="mr-5 hover:text-white" href="/public/contact/contact.html">Contact</a>
                 <a class="mr-5 hover:text-white" href="/public/News/news.html">News</a>
               </nav>
+              <a href="/public/error.html">
               <button class="inline-flex items-center text-gray-50  bg-purple-500 border-0 py-1 px-3 focus:outline-none hover:bg-purple-600 rounded text-base mt-4 md:mt-0">Brochure  <i class="fas fa-level-down-alt"></i>
-              </button>
+              </button></a>
             </div>
           </header>
     </section>
@@ -50,7 +51,7 @@
               </div>
               <div class="sm:w-2/3 sm:pl-8 sm:py-8 sm:border-l border-gray-800 sm:border-t-0 border-t mt-4 pt-4 sm:mt-0 text-center sm:text-left">
                 <p class="leading-relaxed text-lg mb-4">After Participating in over many events in his esport career Alex decided to make the esport event of his own which started first for his fans as a weekend fun time now is event with worldwide following and growing community  </p>
-                <a class="text-purple-400 inline-flex items-center" href="">Get in touch <i class="fas fa-arrow-right w-4 h-4 ml-2""></i>
+                <a class="text-purple-400 inline-flex items-center" href="/public/error.html">Get in touch <i class="fas fa-arrow-right w-4 h-4 ml-2""></i>
                 </a>
               </div>
             </div>
@@ -73,9 +74,9 @@
                   <h3 class="text-gray-500 mb-3">Event Head</h3>
                   <p class="mb-4">Thomas as like always busy planning the best way to make events successfull</p>
                   <span class="inline-flex">
-                    <a class="text-gray-500"><i class="fab fa-facebook-f w-5 h-5"></i></a>
-                    <a class="ml-2 text-gray-500"><i class="fab fa-twitter w-5 h-5"></i> </a>
-                    <a class="ml-2 text-gray-500"><i class="fab fa-linkedin-in w-5 h-5"></i></a>
+                    <a class="text-gray-500" href="/public/error.html"><i class="fab fa-facebook-f w-5 h-5"></i></a>
+                    <a class="ml-2 text-gray-500"  href="/public/error.html"><i class="fab fa-twitter w-5 h-5"></i> </a>
+                    <a class="ml-2 text-gray-500"  href="/public/error.html"><i class="fab fa-linkedin-in w-5 h-5"></i></a>
                   </span>
                 </div>
               </div>
@@ -88,9 +89,9 @@
                   <h3 class="text-gray-500 mb-3">Tech Head</h3>
                   <p class="mb-4">Alexa and her team is busy with designing the website and solving ERRORS</p>
                   <span class="inline-flex">
-                    <a class="text-gray-500"><i class="fab fa-facebook-f w-5 h-5"></i></a>
-                    <a class="ml-2 text-gray-500"><i class="fab fa-twitter w-5 h-5"></i> </a>
-                    <a class="ml-2 text-gray-500"><i class="fab fa-linkedin-in w-5 h-5"></i></a>
+                    <a class="text-gray-500"  href="/public/error.html"><i class="fab fa-facebook-f w-5 h-5"></i></a>
+                    <a class="ml-2 text-gray-500" href="/public/error.html"><i class="fab fa-twitter w-5 h-5"></i> </a>
+                    <a class="ml-2 text-gray-500" href="/public/error.html"><i class="fab fa-linkedin-in w-5 h-5"></i></a>
                   </span>
                 </div>
               </div>
@@ -103,9 +104,9 @@
                   <h3 class="text-gray-500 mb-3">Sponsor Head</h3>
                   <p class="mb-4">To get you best rewards and us make this event possible in the best manner Sposor team got us </p>
                   <span class="inline-flex">
-                    <a class="text-gray-500"><i class="fab fa-facebook-f w-5 h-5"></i></a>
-                    <a class="ml-2 text-gray-500"><i class="fab fa-twitter w-5 h-5"></i> </a>
-                    <a class="ml-2 text-gray-500"><i class="fab fa-linkedin-in w-5 h-5"></i></a>
+                    <a class="text-gray-500" href="/public/error.html"><i class="fab fa-facebook-f w-5 h-5"></i></a>
+                    <a class="ml-2 text-gray-500" href="/public/error.html"><i class="fab fa-twitter w-5 h-5"></i> </a>
+                    <a class="ml-2 text-gray-500" href="/public/error.html"><i class="fab fa-linkedin-in w-5 h-5"></i></a>
                   </span>
                 </div>
               </div>
@@ -118,9 +119,9 @@
                   <h3 class="text-gray-500 mb-3">Social Media Head</h3>
                   <p class="mb-4">To get funniest meme up first and other information Social media is online(like 24hr)</p>
                   <span class="inline-flex">
-                    <a class="text-gray-500"><i class="fab fa-facebook-f w-5 h-5"></i></a>
-                    <a class="ml-2 text-gray-500"><i class="fab fa-twitter w-5 h-5"></i> </a>
-                    <a class="ml-2 text-gray-500"><i class="fab fa-linkedin-in w-5 h-5"></i></a>
+                    <a class="text-gray-500"  href="/public/error.html"><i class="fab fa-facebook-f w-5 h-5"></i></a>
+                    <a class="ml-2 text-gray-500"  href="/public/error.html"><i class="fab fa-twitter w-5 h-5"></i> </a>
+                    <a class="ml-2 text-gray-500"  href="/public/error.html"><i class="fab fa-linkedin-in w-5 h-5"></i></a>
                   </span>
                 </div>
               </div>
@@ -132,23 +133,23 @@
       <section class="bottom">
         <footer class="text-gray-400 bg-gray-900 body-font">
             <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
-              <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
+              <a class="flex title-font font-medium items-center md:justify-start justify-center text-white" href="/public/index.html">
                 <img class="ml-3 logo" src="/public/img/logo.png" alt="logo">
                 <span class="ml-3 text-xl">Gam-Con</span>
               </a>
               <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2021 Gam-Con
               </p>
               <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
-                <a class="text-gray-400">
+                <a class="text-gray-400" href="/public/error.html">
                     <i class="fab fa-facebook-f"></i>
                 </a>
-                <a class="ml-3 text-gray-400">
+                <a class="ml-3 text-gray-400"  href="/public/error.html">
                     <i class="fab fa-twitter"></i>
                 </a>
-                <a class="ml-3 text-gray-400">
+                <a class="ml-3 text-gray-400"  href="/public/error.html">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a class="ml-3 text-gray-400">
+                <a class="ml-3 text-gray-400"  href="/public/error.html">
                     <i class="fab fa-linkedin-in"></i>
                 </a>
               </span>
