--- a/public/contact/contact.html
+++ b/public/contact/contact.html
@@ -60,15 +60,15 @@
                 <button class="flex mx-auto text-white bg-purple-500 border-0 py-2 px-8 focus:outline-none hover:bg-purple-600 rounded text-lg">Send</button>
               </div>
               <div class="p-2 w-full pt-8 mt-8 border-t border-gray-800 text-center">
-                <a class="text-purple-400">Gamcon.official@mail.com</a>
+                <a class="text-purple-400"  href="/public/error.html">Gamcon.official@mail.com</a>
                 <p class="leading-normal my-5">49 brooklyn St.
                   <br>New Town, NY 58069
                 </p>
                 <span class="inline-flex">
-                    <a class="text-gray-500"><i class="fab fa-facebook-f w-5 h-5"></i></a>
-                    <a class="ml-4 text-gray-500"><i class="fab fa-twitter w-5 h-5"></i> </a>
-                    <a class="ml-4 text-gray-500"><i class="fab fa-linkedin-in w-5 h-5"></i></a>
-                    <a class="ml-4 text-gray-500"><i class="fab fa-instagram w-5 h-5"></i></a>
+                    <a class="text-gray-500" href="/public/error.html"><i class="fab fa-facebook-f w-5 h-5"></i></a>
+                    <a class="ml-4 text-gray-500"  href="/public/error.html"><i class="fab fa-twitter w-5 h-5"></i> </a>
+                    <a class="ml-4 text-gray-500"  href="/public/error.html"><i class="fab fa-linkedin-in w-5 h-5"></i></a>
+                    <a class="ml-4 text-gray-500"  href="/public/error.html"><i class="fab fa-instagram w-5 h-5"></i></a>
 
                 </span>
               </div>
