--- a/public/index.html
+++ b/public/index.html
@@ -45,12 +45,14 @@
       <p class="mb-8 leading-relaxed">For the Gamers , By the Gamers We wanted to create a community for gamers so we made this annual event to showcase your skill
           compete make friends and most importantly gain recoginition in the field of gaming with the support of 3M+ viewers (last year!) </p>
       <div class="flex justify-center">
-        <button class="inline-flex text-white bg-purple-500 border-0 py-2 px-6 focus:outline-none hover:bg-purple-600 rounded text-lg">Brochure</button>
+       <a href="/public/error.html">
+        <button class="inline-flex text-white bg-purple-500 border-0 py-2 px-6 focus:outline-none hover:bg-purple-600 rounded text-lg" >Brochure</button>
         <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">Register</button>
+      </a>
       </div>
     </div>
     <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-      <img class="object-cover object-center rounded" alt="gaming-img-here" src="">
+      <img class="object-cover object-center rounded" alt="gaming-img-here" src="/public/img/i1.png">
     </div>
   </div>
 </section>
@@ -69,7 +71,7 @@
     <section class="text-gray-400 bg-gray-900 body-font">
         <div class="container px-5 py-24 mx-auto flex flex-wrap">
           <div class="lg:w-1/2 w-full mb-10 lg:mb-0 rounded-lg overflow-hidden">
-            <img alt="game-event" class="object-cover object-center h-full w-full" src="">
+            <img alt="game-event" class="object-cover object-center h-full w-full" src="/public/img/i2.png">
           </div>
           <div class="flex flex-col flex-wrap lg:py-6 -mb-10 lg:w-1/2 lg:pl-12 lg:text-left text-center">
             <div class="flex flex-col mb-10 lg:items-start items-center">
@@ -80,7 +82,7 @@
               <div class="flex-grow">
                 <h2 class="text-white text-lg title-font font-medium mb-3">Prize Pool</h2>
                 <p class="leading-relaxed text-base">2021 GAM-CON is Going to have the biggest Prize Pool</p>
-                <a class="mt-3 text-purple-400 inline-flex items-center" >Learn More <i class="fas fa-arrow-right w-4 h-4 ml-2""></i>
+                <a class="mt-3 text-purple-400 inline-flex items-center" href="/public/error.html">Learn More <i class="fas fa-arrow-right w-4 h-4 ml-2""></i>
                 </a>
               </div>
             </div>
@@ -91,7 +93,7 @@
               <div class="flex-grow">
                 <h2 class="text-white text-lg title-font font-medium mb-3">More Games</h2>
                 <p class="leading-relaxed text-base">From Tetris to Hardcore Shooter Games , Every Type of Games for Every Type of Gamers</p>
-                <a class="mt-3 text-purple-400 inline-flex items-center">Learn More <i class="fas fa-arrow-right w-4 h-4 ml-2""></i>
+                <a class="mt-3 text-purple-400 inline-flex items-center" href="/public/error.html">Learn More <i class="fas fa-arrow-right w-4 h-4 ml-2""></i>
                 </a>
               </div>
             </div>
@@ -102,7 +104,7 @@
               <div class="flex-grow">
                 <h2 class="text-white text-lg title-font font-medium mb-3">Most Entertaing Live Stream</h2>
                 <p class="leading-relaxed text-base">This year live stream will feature gamers , musician and so many artist as commentator to give best experience</p>
-                <a class="mt-3 text-purple-400 inline-flex items-center">Learn More <i class="fas fa-arrow-right w-4 h-4 ml-2""></i>
+                <a class="mt-3 text-purple-400 inline-flex items-center" href="/public/error.html">Learn More <i class="fas fa-arrow-right w-4 h-4 ml-2""></i>
                 </a>
               </div>
             </div>
@@ -189,23 +191,23 @@
 <section class="bottom">
     <footer class="text-gray-400 bg-gray-900 body-font">
         <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
-          <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
+          <a class="flex title-font font-medium items-center md:justify-start justify-center text-white" href="/public/index.html">
             <img class="ml-3 logo" src="img/logo.png" alt="logo">
             <span class="ml-3 text-xl">Gam-Con</span>
           </a>
           <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2021 Gam-Con
           </p>
           <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
-            <a class="text-gray-400">
+            <a class="text-gray-400" href="/public/error.html">
                 <i class="fab fa-facebook-f"></i>
             </a>
-            <a class="ml-3 text-gray-400">
+            <a class="ml-3 text-gray-400" href="/public/error.html">
                 <i class="fab fa-twitter"></i>
             </a>
-            <a class="ml-3 text-gray-400">
+            <a class="ml-3 text-gray-400" href="/public/error.html">
                 <i class="fab fa-instagram"></i>
             </a>
-            <a class="ml-3 text-gray-400">
+            <a class="ml-3 text-gray-400" href="/public/error.html">
                 <i class="fab fa-linkedin-in"></i>
             </a>
           </span>
@@ -215,7 +217,7 @@
 <!-- ///////////////////////////////////////////////FOOTER\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
 
 <!-- /////////////////////////////////////////////////////////////SCRIPTS\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
-<script src="winbox/winbox.js"></script>
+
 <script src="index.js"></script>
 <script src="https://kit.fontawesome.com/dffe87f9d5.js" crossorigin="anonymous"></script>
 <!-- /////////////////////////////////////////////////////////////SCRIPTS\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
